[tool.poetry]
name = "pen-plotter-demo"
version = "0.1.0"
description = ""
authors = ["El Kaplan <el.kaplan@geckorobotics.com>"]
readme = "README.md"
packages = [{include = "pen_plotter_demo"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
elkplot = {git = "https://github.com/ejkaplan/elkplot"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
